<resources>
    <string name="app_name">PaymentReminderApp</string>
    <string name="textForNewUsers">Jesteś nowym użytkownikiem? Klinknij tutaj</string>
    <string name="instruction_title_first">Krok pierwszy</string>
    <string name="instruction_title_second">Krok drugi</string>
    <string name="next">Dalej</string>
    <string name="attention">Uwaga</string>
    <string name="out">Wyjdź</string>
    <string name="give_password">Podaj haslo</string>
    <string name="finish">Zakończ</string>
    <string name="invoices">Faktury</string>
    <string name="statistics">Statystyki</string>
    <string name="payments">Płatności</string>
    <string name="signOut">Wyloguj</string>
    <string name="settings">Ustawienia</string>
    <string name="menu">Menu</string>
    <string name="changeStatus">Zmień status</string>
    <string name="deadline">Termin zapłaty:</string>
    <string name="money">Kwota:</string>
    <string name="all">Wszystkie</string>
    <string name="paid">Zapłacone</string>
    <string name="unpaid">Do zapłaty</string>
    <string name="ensure_change_payment_status">Czy na pewno chcesz zmienić status płatności faktury?</string>
    <string name="confirm">Tak</string>
    <string name="cancel">Nie</string>
    <string name="details">Szczegóły</string>
    <string name="show_more">pokaż więcej</string>
    <string name="receiverName">Odbiorca: </string>
    <string name="accountNumber">Nr konta: </string>
    <string name="confirmed">Potwierdzona faktura</string>
    <string name="showPDF">Podgląd PDF</string>
    <string name="confirm_invoice">Potwierdź dane z faktury</string>
    <string name="addedBy">Dodane:</string>
    <string name="edit">Edytuj</string>
    <string name="invoice">Faktura</string>
    <string name="invoice_details">Szczegóły faktury</string>
    <string name="confirm_invoice_short">Potwierdź dane</string>
    <string name="pay">Przejdź do płatności</string>
    <string name="add_when">Data zapisania:</string>
    <string name="pay_short">Zapłać</string>
    <string name="added_when">Data zapisania:</string>
    <string name="edit_title">Edycja</string>
    <string name="choose_date">Wybierz datę</string>
    <string name="save">Zapisz</string>
    <string-array name="yes_no_array">
        <item>Tak</item>
        <item>Nie</item>
    </string-array>
    <string name="default_font" translatable="false">sans-serif-condensed</string>

</resources>
