<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    style="@style/Card">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textViewDeadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/deadline"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large" />

                <TextView
                    android:id="@+id/textViewMoney"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textViewDeadline"
                    android:text="@string/money"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textViewIsPaid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Zapłacone"
                        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

                    <ImageView
                        android:id="@+id/imageViewIsPaid"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        app:srcCompat="@drawable/ic_done_black_24dp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:gravity="center"
                android:layout_marginEnd="8dp"
                android:orientation="vertical">

                <Button
                    style="@style/ButtonCabal"
                    android:id="@+id/btnChangeStatus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_centerInParent="true"
                    android:text="@string/changeStatus"></Button>

            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</androidx.cardview.widget.CardView>